# ChangeLog for app-backup/burp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.26.ebuild,
  files/burp.initd:
  Use checkpath to set up directories. Make a cosmetic change in the ebuild.

  19 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.26.ebuild:
  Fix condition whether /run/lock/burp exists or not.

  18 Nov 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.26.ebuild,
  files/burp.initd:
  Change location of a lock file to a writable 'burp' subdirectory. Create
  /run/lock/burp before running burp-server.

  Rels bug #411973. Thanks to Marcin Mirosław for pointing that out.

  16 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.20.ebuild,
  +files/burp.initd:
  Ebuild improvements taken from Aurelien Reynaud's <aurelien@wattapower.net>
  ebuild attached to bug #411973.

  03 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.20.ebuild:
  Specified correct sbin and sysconf directories, because files used to be
  installed into /usr/usr/sbin and /etc instead of /usr/sbin and /etc/burp.

  03 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.20.ebuild:
  Fixed handling tcpd USE flag.

*burp-1.4.20 (03 Aug 2014)

  03 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> +burp-1.4.20.ebuild,
  +metadata.xml:
  Initial ebuild of latest stable candidate version.
