@@ -4,17 +4,17 @@ Hash: SHA256
 AUX 1.4.26-tinfo.patch 767 SHA256 5283a6e2ebbfc5192a9598bf2cbf3bc63d6a11613d1fa650708358da584ad519 SHA512 2f2a60951357f9d05213616ae1e623feb052bdd480e8c46e47eaabb86b53a5822e8ffcbd321d502de49b670f72075445e303ef78bcb02deb9ee16ae7f7590b65 WHIRLPOOL 3bb7a934be592b0f282aaf93e94c4ae7c939bd9cc945e122c40ba242284f48cac3855c240081fc654b6e684ddbd5769ead1ff0c2d3ccbd6e7bda824b34f7ba18
 AUX burp.initd 747 SHA256 25f3916271523a4fdda027c188698b35576aa431ccc19f1f80d2b63d2ebfb59b SHA512 f00295d843ab6fa1f1ff14f182ead2bdf806686139cd2ebdb410c6fa0a10989253cd82e0828d3e4bca6d64e5c1cc53c4e9ead4a0bf608d17212492e6052b6a73 WHIRLPOOL 2983efd6f1845fb0756e9b33693f02c8173e46bb2ad566c69cb5cde2e0511a8129e72b5c76079ce0978cc7094b77540dd4690565b4d049d0701f41ebb4ff5d31
 DIST burp-1.4.26.tar.bz2 710273 SHA256 04111dd0d41277b6b257d7551333f394a3b6da12ffefc8222ba99777ed9448ff SHA512 d42249ac837a642ad0ca980060053d58685c2a5aa61d790ad67a72828fe632f99346886d29e175f6f533267608e55d784db86d5f0ee946519b937ef2825d4530 WHIRLPOOL f724d0a91d4447c5a2ce7920662078a845ae300966bc9425632f80f81cfd19b223c8f0c108c7e6e636a4503837b7202b643bc3c933d3e894d3a0f7a0358d4458
-EBUILD burp-1.4.26.ebuild 2478 SHA256 c420629aa0bd455a58908d91217476ce7e4c1b8ce47a6cf33ed4f74f423eb3c2 SHA512 5ae733be054ab931c124f335d313d54bdd4cef44ef1e1f57030dd546f3fcaaa91a9bbe2f247561652b42ef2eb61036010cecfd640edbc8413b0c3388bf86cb6e WHIRLPOOL e50173a3ea42e86279e50db789cbdb52aee881c0238693657df988a446d86342ab2fc4fa2ab34b98d534c2e97b495339c18ef631216ab42670db52acc419cd1c
-MISC ChangeLog 1439 SHA256 cb264a4085ac6de9185db693db0063ed3c4423e6b3bb2a1a1e0bf8e500e54793 SHA512 f34163f516f3182f35c3eb45e3d074a0c0655de9a61dbf990713b2a0bdeafe0da86b581063a67901b46c4d5704d7e0e6b2657e33749a2ceb89293cbd251550a2 WHIRLPOOL 635114eea89e59e2b87ab570f53f43d757cd940b8477f38b6746046a5ffeb6e8016156ddfaf074984bf18055dc33c7ef1a2459be81edb5cd39915e4c2db60031
+EBUILD burp-1.4.26.ebuild 2421 SHA256 7c525378d84d6039e63c33584669d4b2899d53439817a3de378b30698dff139b SHA512 319d864f8a7d4c150fbeded222ef09df9215b6ae7274e7e68a2e810d59be415b53455e1b3be5fa80ee8ed699b69955d67bc88931176e38cba509d414f5438721 WHIRLPOOL b74ef84508b25f44993aa7b2e4ba4fb3ae47448f9fa90b97dba5c97277798a7d58188ce9dc9a26ab3b5dec08ef95931b87f334bfb68b4e77f1f7fa473d3ca3d9
+MISC ChangeLog 1594 SHA256 3f30996a8fe1af22aa35b8eb3187ceb9719d30f1f4d7c40f34cbd327fb56be82 SHA512 b8123559ee50c2316be5f7a512d80f93ef66aa9ae67dc2f3cea2c3a9418d6ddc675762ff7e2260acd57670f7e17cdff2f8156329d0e57a12bfb3860ab4fc0669 WHIRLPOOL b0726c93b1353520d85c4278e23bf8f30e36797da00783c4fbcdc337c6b4ef6437b1b5033e2d5ffe506e2fbe6ac5644fa8d34ed9671b64904b0646d759dde6c2
 MISC metadata.xml 556 SHA256 9c70bf04bfc1bf607ab5319f644fb52eb4e3aa53fe1cc6d7453a6eae3d8463e6 SHA512 31801c6438c7e6bd44dbd2cd137c509584d91c57837dca6392544bd312a6ff4abb5cbd9b7486983d2146a18f9b22303bfa69a66982cbdecbf8daff78b43cdfae WHIRLPOOL ab1cc652c1a6a78777f09678649faa17dc648139dcc8f9c7045a0c0aaaf18b1178be75f60b89939c9606885dce4b152c95aae061e8bd0ff2b6cf644ec7d4df24
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUbPtOAAoJEPATRTHh2/q1gDMH/0rxjipvP/XyYdWEgN3EqW/S
-4TPUNf7KUDc0tjkV0QGjlYaPvF0LGtXY0MiaED+61+h3PliQRGGJG2SagsfJhrLh
-KMdy0ys7QEtKRhRSEUpLJHRngthpd73v/73PmRcH91qxpSnGVXJrMvLsbLS3nELA
-8vUrm+kXbsEZN7bk8foALpzbwCQBDY4Sc/u0ngtGk0FKB4ZkHtBz/B5cY6kXIWib
-7+Zj6m0gEcQ/VrhyBdQErSuT1VCUn1Y6fFgzv5uiwAzLMq31Kw1Ap6LRtI0jvwk6
-36u6SyL2uI6pFg6ycNsvQ+cGZn34bdWInumawTCurR9vFTguE02CdlF4yZhn/0Y=
-=2eW2
+iQEcBAEBCAAGBQJUbRQ3AAoJEPATRTHh2/q1cM4H/1KlXSjdnBt+amUaCiltB8as
+4LprSQUzoUU9z2WSdT0QBVRGJJhLpPO35VY9PtFDzQ2t9Sp8FzOqMAuT1mkJswGT
+JNPS3dDFyY8NKKIlNmdCzEyLmzLaIvxSdcEPHVQ60wI5jd77Tdgt70/hi4VdEv0j
+ZYeG5UmTu0bwIHjRgvDU0PZxgsBMDiwJMPMbqq33Z0CLjxpi9g3TM9oEQNkv2YMQ
+EOV26cyGOrJ1JaLnmn8YIML3m5C6xnqy7MX6azMmb11PBCvBkrqg5rtFpyMcG3NY
+3WYvkeEhCidn92M9X4JFbAzkrsPkGrHo+FVEbrdwBWJ1CNNkZlYkYfEC0VkuaSg=
+=3XPh
 -----END PGP SIGNATURE-----
